<resources>
    <string name="app_name">OfflineFirebaseDatabase</string>

    <string name="enter_id">Enter Id</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email Id</string>
    <string name="enter_number">Enter Mobile Number</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_age">Enter Age</string>
    <string name="create_profile">Create Profile</string>

</resources>
