<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.CreateProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@android:drawable/ic_delete"
            app:civ_border_width="5dp"
            app:civ_border_color="#FFFFFF" />

        <ImageView
            android:id="@+id/takePic_iv"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="bottom"
            android:layout_marginStart="20dp"/>

    </LinearLayout>


    <EditText
        android:id="@+id/id_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_margin="10dp"
        android:imeOptions="actionNext"
        android:hint="@string/enter_id"/>

    <EditText
        android:id="@+id/name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:layout_margin="10dp"
        android:imeOptions="actionNext"
        android:hint="@string/enter_name"/>

    <EditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_margin="10dp"
        android:imeOptions="actionNext"
        android:hint="@string/enter_email"/>

    <EditText
        android:id="@+id/number_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_margin="10dp"
        android:maxLength="10"
        android:imeOptions="actionNext"
        android:hint="@string/enter_number"/>

    <Button
        android:id="@+id/createProfileBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/create_profile"/>

</LinearLayout>